package br.com.ajf.learnjavadesignpatterns.strategy;

public interface Strategy
{
	int execute(int number1,int number2);
}
